repo files/.metadata/.plugins/org.eclipse.cdt.ui/try.build.log
20:56:01 **** Incremental Build of configuration Debug for project try ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\try.o" "..\\src\\try.c" 
..\src\try.c:15:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\src\try.c: In function 'main':
..\src\try.c:19:9: error: 'Stdout' undeclared (first use in this function)
  fflush(Stdout);
         ^~~~~~
..\src\try.c:19:9: note: each undeclared identifier is reported only once for each function it appears in
..\src\try.c:20:10: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
  scanf("%d",I);
          ^

20:56:01 Build Finished (took 396ms)

